--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,14 @@
 #root {
-  margin: 0 auto;
-  text-align: center;
+  position:fixed;
+  margin: 0;
+  padding: 0;
+  top:0;
+  left:0;
+
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 /* basic styles for the navbar */
@@ -52,4 +60,5 @@ nav ul li button:hover {
 .content {
   margin-top: 20px;
 }
+
 
