--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,25 +1,12 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-body {
+#root {
+  position:fixed;
   margin: 0;
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
-}
+  padding: 0;
+  top:0;
+  left:0;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
