--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -58,7 +58,22 @@ nav ul li button:hover {
 
 /* Ensure content is below the navbar */
 .content {
-  margin-top: 20px;
+  margin-top: 0px;
+  background: #f0f2f5;
+  width: 100%;
+  height: 100%;
 }
 
+
+
+.team-roll-call{
+  font-family: "Poppins";
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:#f0f2f5;
+  color: black;
+  text-align: center;
+}
 
