--- a/frontend/src/pages/Home/HomePage.css
+++ b/frontend/src/pages/Home/HomePage.css
@@ -1,4 +1,3 @@
-/* src/pages/Home/HomePage.css */
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
@@ -6,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 15px;
+  padding: 0 px;
   min-height: 100vh;
   background: #f0f2f5;
 }
@@ -25,6 +24,7 @@
 
 .left-section h2 {
   font-size: 4rem;
+  font-family: "Poppins", Verdana, sans-serif;
   text-align: center;
   margin-bottom: 10px;
 }
@@ -58,11 +58,14 @@ form {
 form input {
   height: 55px;
   width: 100%;
+  font-family: "Poppins";
   border: 1px solid #ccc;
-  border-radius: 6px;
+  border-radius: 4px;
   margin-bottom: 15px;
   font-size: 1rem;
   padding: 0 14px;
+  max-width: 450px; /* Optional: limit the width of the input */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 form input:focus {
@@ -86,9 +89,11 @@ form input:focus {
   border: none;
   outline: none;
   cursor: pointer;
+  font-family: "Poppins";
   background: #1877f2;
-  padding: 15px 0;
-  border-radius: 6px;
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
   color: #fff;
   font-size: 1.25rem;
   font-weight: 600;
@@ -113,6 +118,7 @@ hr {
 
 .button {
   margin-top: 25px;
+  font-family: "Poppins";
   text-align: center;
   margin-bottom: 20px;
 }
@@ -123,10 +129,22 @@ hr {
   border-radius: 6px;
   color: #fff;
   font-size: 1.063rem;
+  font-family: "Poppins";
   font-weight: 600;
   transition: 0.2s ease;
 }
 
 .button a:hover {
   background: #3ba626;
+}
+
+.team-roll-call{
+  font-family: "Poppins";
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:#f0f2f5;
+  color: black;
+  text-align: center;
 }
