--- a/frontend/src/components/Input/CreatePostForm.css
+++ b/frontend/src/components/Input/CreatePostForm.css
@@ -1,20 +1,158 @@
-.Container {
-	background-color: blue;
-	box-shadow: 0px 10px 30px rgba(153, 153, 153, 0.3);
-	padding: 30px;
-	border-radius: 15px;
-	text-align: center;
+/* New Post Button */
+.new-post-button {
 	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-family: 'Montserrat', sans-serif;
-	width: 500px;
-	max-width: 90%;
+	right: 16px;
+	bottom: 16px;
+	width: 48px;
+	height: 48px;
+	background:  #4B4C4F;
+	box-shadow: 0 2px 4px  rgba(0, 0, 0, 0.1), 0 12px 28px rgba(0, 0, 0, 0.2);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 1000px;
+}
+.new-post-action.postsubmit {
+	color: #1877f2;
+}
+
+.card {
+	padding: 12px 16px 10px 16px;
+	border-radius: max(0px, min(8px, calc((100vw - 4px - 100%) * 9999))) / 8px;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+	background: white;
+	margin-bottom: 16px;
+}
+@media only screen and (max-width: 1300px) {
+	.desktop-only {
+	display: none;
+	}
+}
+@media only screen and (max-width: 1080px) {
+	.desktop-tablet-only {
+	display: none;
+	background: blue;
+	}
+}
+.mobile-only {
+	display: none;
+}
+@media only screen and (max-width: 700px) {
+	.mobile-only {
+    display: initial;
+	}
+}
+
+/* feed */
+.card.post {
+	padding: 0;
 }
 
 
-.postsubmit{
-    background-color: blue;
+/* new-post-action */
+.new-post-action {
+	display: flex;
+}
+.new-post-action .my-profile {
+	width: 40px;
+	height: 40px;
+	border-radius: 1000px;
+	border: 1px solid  rgba(0, 0, 0, 0.1);
+	margin-right: 8px;
+}
+.new-post-action input {
+	all: unset;
+	width: 100%;
+	background:  #F0F2F5;
+	border-radius: 1000px;
+	padding: 8px 12px;
+}
 
+.new-post-action button {
+	all: unset;
+	width: 4.5%;
+	background:   #1877f2;
+	color: white;
+	border-radius: 1000px;
+	padding: 5px 10px;
+}
+
+.new-post-types {
+	margin-top: 12px;
+	border-top: solid 1px  #E4E6EB;
+	display: flex;
+	justify-content: space-evenly;
+	font-size: 15px;
+	font-weight: 600;
+	color: #65676B;
+	padding-top: 8px;
+}
+.new-post-types .post-type {
+	padding: 8px;
+	display: flex;
+	align-items: center;
+}
+.new-post-types .post-type i {
+	margin-right: 8px;
+}
+
+.live-video-icon {
+	height: 24px;
+	width: 24px;
+	background-image: url("frontend/src/assets/Live Video.png");
+	background-size: 25px 265px;
+	display: inline-block;
+	background-position: 0 -25px;
+}
+.photo-video-icon {
+	height: 24px;
+	width: 24px;
+	background-image: url("frontend/src/assets/Photo.png");
+	background-size: 25px 265px;
+	display: inline-block;
+	background-position: 0 -100px;
+}
+.feeling-activity-icon {
+	height: 24px;
+	width: 24px;
+	background-image: url("../images/icons3.png");
+	background-size: 25px 265px;
+	display: inline-block;
+	background-position: 0 -50px;
+}
+
+/* Common */
+body {
+	background: #F0F2F5;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', sans-serif;
+	text-decoration-thickness: auto;
+	-webkit-font-smoothing: antialiased;
+	color: #1c1e21;
+}
+  * {
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', sans-serif;
+	text-decoration-thickness: auto;
+	-webkit-font-smoothing: antialiased;
+}
+svg,
+img {
+	display: block;
+}
+.card {
+	padding: 12px 16px 10px 16px;
+	border-radius: max(0px, min(8px, calc((100vw - 4px - 100%) * 9999))) / 8px;
+	box-shadow: 0 1px 2px  rgba(0, 0, 0, 0.2);
+	background:  #FFFFFF;
+	margin-bottom: 16px;
+}
+@media only screen and (max-width: 1300px) {
+	.desktop-only {
+	display: none;
+	}
+}
+@media only screen and (max-width: 1080px) {
+	.desktop-tablet-only {
+	display: none;
+	background: blue;
+	}
 }
