--- a/frontend/src/components/Input/CreatePostForm.css
+++ b/frontend/src/components/Input/CreatePostForm.css
@@ -104,6 +104,44 @@
 	display: inline-block;
 	background-position: 0 -25px;
 }
+
+.live-video-button {
+	background: #1876f200;
+	color: rgb(0, 0, 0);
+	border-radius: 1000px;
+	padding: 5px 10px;
+	border: none
+}
+
+.live-video-button:hover {
+	background: #166fe5;
+	color: white
+}
+.photo-button {
+	background: #1876f200;
+	color: rgb(0, 0, 0);
+	border-radius: 1000px;
+	padding: 5px 10px;
+	border: none
+}
+
+.photo-button:hover {
+	background: #166fe5;
+	color: white
+}
+.feeling-button {
+	background: #1876f200;
+	color: rgb(0, 0, 0);
+	border-radius: 1000px;
+	padding: 5px 10px;
+	border: none
+}
+
+.feeling-button:hover {
+	background: #166fe5;
+	color: white
+}
+
 .photo-video-icon {
 	height: 24px;
 	width: 24px;
@@ -156,3 +194,4 @@ img {
 	background: blue;
 	}
 }
+
