my profile page stylings

--- a/frontend/src/pages/Home/HomePage.css
+++ b/frontend/src/pages/Home/HomePage.css
@@ -103,13 +103,13 @@ form input:focus {
   background: #0d65d9;
 }
 
-.button {
+.signup {
   margin-top: 25px;
   text-align: center;
   margin-bottom: 20px;
 }
 
-.button a {
+.signup a {
   display: inline-block;
   padding: 15px 20px;
   background: #42b72a;
@@ -122,7 +122,7 @@ form input:focus {
   transition: 0.2s ease;
 }
 
-.button a:hover {
+.signup a:hover {
   background: #3ba626;
 }
 
