--- a/frontend/src/pages/UserProfile/UserProfilePage.css
+++ b/frontend/src/pages/UserProfile/UserProfilePage.css
@@ -75,7 +75,7 @@
     color: white; /* Change text color on hover for better contrast */
 }
 
-.additional-content-container {
+.additional-content-container, .my-friends {
     width: 100%;
     height: 550px; /* Fixed height for the additional content container */
     padding: 15px;
@@ -89,19 +89,25 @@
     overflow-y: auto; /* Enable vertical scrolling */
 }
 
-.image-grid {
+.image-grid, .friend-card-container  {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
     width: 100%; /* Ensure the grid takes the full width */
 }
 
-.image-grid img {
+.image-grid img, .friend-card {
     flex: 0 0 calc(50% - 10px); /* Adjust for desired number of columns */
     width: 150px; 
     height: 150px; 
     object-fit: cover;
     object-position: center;
+}
+
+.friend-card {
+    width: 100px;
+    height: 100px;
+    padding: 0px;
 }
 
 .main-content {
@@ -139,64 +145,6 @@
 }
 
 
-
-.edit-profile-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
-    min-height: 80vh; /* change this bit to change position of form on page */
-    padding: 20px;
-    background-color: #f0f2f5; 
-}
-
-.edit-profile-container h2 {
-    color: black;
-    font-size: 2rem;
-    text-align: center; 
-    margin-bottom: 20px; /* Space between title and form */
-    font-family: "Poppins", Verdana, sans-serif;
-    width: 100%; 
-}
-
-
-.edit-profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    background: #fff;
-    border-radius: 8px;
-    padding: 30px; /* Increase the padding for more space inside */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1);
-    max-width: 600px; 
-    width: 100%; 
-    height: auto; /* Allows height to adjust based on content */
-}
-
-.edit-profile form {
-    width: 100%;
-}
-
-.edit-profile label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.edit-profile input,
-.edit-profile textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 14px;
-}
-
-.edit-profile textarea {
-    height: 120px; 
-    resize: vertical; 
-}
 
 .button-container {
     margin-top: 20px; 
