--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,9 @@
-#root {
+:root {
   position:relative;
   margin: 0;
   padding: 0;
   top:0;
   left:0;
-
   width: 100%;
   height: 100%;
   box-sizing: border-box;
