--- a/frontend/src/components/Ads/RightFeed.css
+++ b/frontend/src/components/Ads/RightFeed.css
@@ -129,7 +129,7 @@
     font-size: 15px;
     font-weight: 500;
   }
-
+  
   .adverts-games-containers {
     width: 100%;
     height: 1000px; /* Fixed height for the additional content container */
@@ -154,4 +154,19 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start; /* Enable vertical scrolling */
+}
+
+.image-grid, .adverts-games-containers  {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  width: 100%; /* Ensure the grid takes the full width */
+}
+
+.image-grid img, .adverts-games-containers {
+  flex: 0 0 calc(50% - 10px); /* Adjust for desired number of columns */
+  width: 150px; 
+  height: 150px; 
+  object-fit: cover;
+  object-position: center;
 }
